First attempt, need to fix rate box with comment on mobile

--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,151 @@
+@import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@400;500;700&display=swap");
+footer {
+  position: fixed;
+  bottom: 0;
+}
 
+.attribution {
+  font-size: 15px;
+  text-align: center;
+}
+
+.attribution a {
+  color: hsl(228deg, 45%, 44%);
+}
+
+#back {
+  background: url(../../images/bg-pattern-top-desktop.svg) top left no-repeat, url(../../images/bg-pattern-bottom-desktop.svg) bottom right no-repeat;
+}
+
+body {
+  font-family: "League Spartan";
+  display: flex;
+  flex-direction: column;
+}
+body .top {
+  display: flex;
+  height: 50vh;
+  width: auto;
+  justify-content: space-between;
+  margin: 50px;
+  margin-top: 50px;
+}
+body .left__top {
+  width: 400px;
+  min-width: 400px;
+  max-height: 300px;
+  display: flex;
+  flex-direction: column;
+  word-wrap: break-word;
+}
+
+@media screen and (max-width: 950px) {
+  .top {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin-bottom: 100px;
+  }
+
+  body {
+    display: flex;
+    flex-direction: column;
+  }
+
+  #back {
+    background: url(../../images/bg-pattern-top-mobile.svg) top left no-repeat, url(../../images/bg-pattern-bottom-mobile.svg) bottom right no-repeat;
+  }
+}
+.title {
+  font-size: 60px;
+  margin: 0;
+  font-weight: 700;
+  color: hsl(300deg, 43%, 22%);
+}
+
+.subtitle {
+  color: hsl(303deg, 10%, 53%);
+  font-size: 17px;
+  line-height: 25px;
+  font-weight: 500;
+}
+
+.rate {
+  width: 45%;
+  display: flex;
+  flex-direction: column;
+}
+.rate__box {
+  width: 350px;
+  color: hsl(300deg, 43%, 22%);
+  font-weight: 700;
+  background: hsl(300deg, 24%, 96%);
+  margin: 10px;
+  margin-left: 20px;
+  padding: 15px 60px 15px 40px;
+  border-radius: 10px;
+}
+.rate__box--1 {
+  align-self: flex-start;
+}
+.rate__box--2 {
+  align-self: center;
+}
+.rate__box--3 {
+  align-self: flex-end;
+}
+@media screen and (max-width: 1200px) {
+  .rate__box {
+    align-self: center;
+  }
+}
+.rate img {
+  margin-right: 10px;
+}
+
+.comment {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  height: 40vh;
+}
+.comment__box {
+  background: hsl(300deg, 43%, 22%);
+  border-radius: 10px;
+  color: hsl(300deg, 24%, 96%);
+  padding: 30px;
+  margin: 10px;
+  width: 300px;
+}
+.comment__box--1 {
+  align-self: flex-start;
+}
+.comment__box--2 {
+  align-self: center;
+}
+.comment__box--3 {
+  align-self: flex-end;
+}
+.comment__box .name {
+  color: hsl(0deg, 0%, 100%);
+  font-weight: 500;
+  margin-top: 25px;
+}
+.comment__box .verif {
+  color: hsl(333deg, 80%, 67%);
+  font-weight: 400;
+}
+.comment__box .txt_comment {
+  clear: both;
+  font-size: 15;
+  line-height: 20px;
+}
+.comment__box img {
+  border-radius: 50%;
+  float: left;
+  width: 50px;
+  margin: 20px;
+}
 
 /*# sourceMappingURL=style.css.map */
